--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="root"><%- content %></div>
-  <script id="data">var data = <%- data %></script>
+  <script id="data">window.__PRELOADED_STATE__ = <%- data %></script>
   <script src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
   <script type="text/javascript" src="/app.js"></script>
 </body>
