--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<title>Isomorphic Presentation</title>
   <link rel="stylesheet" href="/app.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://tripapp-assets-prs.s3.amazonaws.com/assets/tripapplite.a8adbd9e21116acea1b6c0da77c4e76be8a0d35b.css">
 </head>
 <body>
   <div id="root"><%- content %></div>
